# muse

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.codesight/: CODESIGHT.md  config.md  graph.md  telemetry.md
.codesight/wiki/: index.md  log.md  overview.md
docs/: animated-theme-beat-plan.md  architecture.md  archive-playback.md  beat-reactive-glitch.md  progressive-decode.md  progressive-tree-scan.md  rapid-cycle-memory.md
src/: app.rs  archive.rs  audio.rs  beat.rs  color.rs  config.rs  dircache.rs  event.rs  main.rs  media.rs  metacache.rs  model.rs  particles.rs  spectrum.rs  ui.rs  util.rs
src/app/: input.rs  mediakeys.rs  mod.rs  mouse.rs  nav.rs  playback.rs  queue.rs  shuffle.rs
src/effects/: aurora.rs  basic.rs  blackhole.rs  bloodmoon.rs  bubbles.rs  circuit.rs  constellations.rs  datamosh.rs  electric.rs  fireplace.rs  flag.rs  flame.rs  glitch.rs  matrix.rs  meltdown.rs  mod.rs  plasma.rs  rave.rs  sakura.rs  samurai.rs  snow.rs  starfield.rs  sumie.rs  thunderstorm.rs  vaporwave.rs
src/ui/: inspector.rs  mod.rs  modals.rs  transport.rs  tree.rs  widgets.rs
