[package]
name = "muse"
version = "0.24.2"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
# default-features off drops image-data (tiff/jpeg/png) deps; we only copy text.
# wayland-data-control enables the wlr data-control clipboard backend so copy
# works on Wayland without falling back to X11.
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
bzip2 = "0.6.1"
cpal = "0.18.1"
crossbeam-channel = "0.5.15"
crossterm = "0.28"
directories = "6.0.0"
flate2 = "1.1.9"
ignore = "0.4.26"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
lofty = "0.24.0"
ratatui = "0.29"
# default features off to avoid the chafa C dependency; pure-Rust
# kitty/iterm2/sixel/halfblock protocols still build.
ratatui-image = { version = "4", default-features = false, features = ["crossterm"] }
rtrb = "0.3.4"
rubato = "3.0.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sevenz-rust = "0.6.1"
souvlaki = "0.8.3"
symphonia = { version = "0.5.4", features = ["mp3", "flac", "wav", "ogg", "vorbis", "isomp4", "aac", "alac", "pcm"] }
tar = "0.4.46"
thiserror = "2.0.18"
toml = "1.1.2"
triple_buffer = "9.0.0"
zip = "8.6.0"
